; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_goaccess.c_expand_current_module.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_goaccess.c_expand_current_module.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i64 }

@gscroll = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@HOSTS = common dso_local global i64 0, align 8
@holder = common dso_local global i32 0, align 4
@dash = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @expand_current_module to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @expand_current_module() #0 {
  %1 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @gscroll, i32 0, i32 0), align 8
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %9

3:                                                ; preds = %0
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @gscroll, i32 0, i32 1), align 8
  %5 = load i64, i64* @HOSTS, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %3
  %8 = call i32 (...) @load_ip_agent_list()
  br label %22

9:                                                ; preds = %3, %0
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @gscroll, i32 0, i32 0), align 8
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %9
  br label %22

13:                                               ; preds = %9
  %14 = call i32 @reset_scroll_offsets(%struct.TYPE_3__* @gscroll)
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @gscroll, i32 0, i32 0), align 8
  %15 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @gscroll, i32 0, i32 1), align 8
  %16 = call i32 @free_holder_by_module(i32* @holder, i64 %15)
  %17 = load i32, i32* @dash, align 4
  %18 = call i32 @free_dashboard(i32 %17)
  %19 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @gscroll, i32 0, i32 1), align 8
  %20 = call i32 @allocate_holder_by_module(i64 %19)
  %21 = call i32 (...) @allocate_data()
  br label %22

22:                                               ; preds = %13, %12, %7
  ret void
}

declare dso_local i32 @load_ip_agent_list(...) #1

declare dso_local i32 @reset_scroll_offsets(%struct.TYPE_3__*) #1

declare dso_local i32 @free_holder_by_module(i32*, i64) #1

declare dso_local i32 @free_dashboard(i32) #1

declare dso_local i32 @allocate_holder_by_module(i64) #1

declare dso_local i32 @allocate_data(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
